# mcp-to-robot-main

./: .gitignore  README.md  implementation_plan.md  playwright-log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: cli.py  models.py
src/generator/: robot_writer.py
src/parser/: execution_parser.py  raw_parser.py  report_parser.py
src/transformer/: playwright_to_robot.py
src/validator/: syntax_validator.py
tests/: integration_test.py  test_generator.py  test_parsers.py  test_transformer.py
tests/fixtures/: report.json
