[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-to-robot"
version = "0.1.0"
description = "Convert MCP Playwright execution artifacts into Robot Framework Browser suites."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "robotframework>=7.0",
  "robotframework-browser>=18.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mcp2robot = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "integration_test.py"]
